--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "lib": ["deno.window"],
+    "lib": ["deno.window", "dom", "dom.iterable"],
     "strict": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "module": "esnext",
+    "target": "es2022"
   },
   "imports": {
     "react": "https://esm.sh/react@^18.2.0",
