--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.2.7",
+    "iyzipay": "^2.0.64",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
