--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "node server.cjs",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.cjs"
   },
   "dependencies": {
     "@google/genai": "latest",
     "@supabase/supabase-js": "^2.55.0",
     "@types/dompurify": "^3.0.5",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "dompurify": "^3.2.7",
+    "express": "^5.1.0",
     "iyzipay": "^2.0.64",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
