chore: Deployment hazırlığı ve dokümantasyon temizliği
- Dockerfile Express server için güncellendi
- .dockerignore eklendi
- env.example production için güncellendi
- DEPLOYMENT_CHECKLIST.md eklendi
- Gereksiz geçici .md dosyaları silindi (7 dosya)
- Duplicate COOLIFY_DEPLOYMENT.md silindi

Deployment ready: Coolify için hazır ✅

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,16 @@
-supabase/
-*.lock
-node_modules/
-dist/
-.git/
+node_modules
+npm-debug.log
+.git
 .gitignore
-README.md
+.env
+.env.local
+.env.*.local
+dist
+*.md
+!README.md
+.vscode
+.idea
+*.log
+coverage
+.DS_Store
+Thumbs.db
