--- a/env.example
+++ b/env.example
@@ -18,9 +18,10 @@ VITE_STRIPE_SECRET_KEY=your_stripe_secret_key
 VITE_STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 
 # Application Configuration
-NODE_ENV=development
-VITE_APP_URL=http://localhost:5173
-VITE_API_URL=http://localhost:3000
+NODE_ENV=production
+PORT=3001
+VITE_APP_URL=https://yourdomain.com
+VITE_API_URL=https://yourdomain.com
 
 # Security Configuration
 JWT_SECRET=your_jwt_secret_key
