--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/genai": "latest",
     "@supabase/supabase-js": "^2.55.0",
+    "@tanstack/react-query": "^5.90.3",
     "@types/dompurify": "^3.0.5",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
