--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -2,13 +2,13 @@
 nixPkgs = ["nodejs_22"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["NODE_ENV=development npm ci"]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
-cmd = "node server.cjs"
+cmd = "NODE_ENV=production node server.cjs"
 
 [variables]
 NODE_ENV = "production"
