--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs_22"]
 
 [phases.install]
-cmds = ["npm ci --include=dev"]
+cmds = ["env NODE_ENV=development NPM_CONFIG_PRODUCTION=false npm ci --include=dev"]
 
 [phases.build]
 cmds = ["npm run build"]
@@ -11,7 +11,6 @@ cmds = ["npm run build"]
 cmd = "NODE_ENV=production node server.cjs"
 
 [variables]
-NODE_ENV = "production"
 NPM_CONFIG_PRODUCTION = "false"
 PORT = "3000"
 
