feat: Backend API entegrasyonu ve test scripti eklendi
- Backend API client (apiClient.ts) eklendi
- PAYNET payment entegrasyonu (paynetPayment.ts) eklendi
- Backend API test scripti (testBackendAPI.ts, test-backend-api.js) eklendi
- Backend API dokümantasyonu (BACKEND_API_DOCUMENTATION.md) eklendi
- Iyzico entegrasyonu kaldırıldı, PAYNET'e geçildi
- Payment flow PAYNET backend API kullanacak şekilde güncellendi
- Test scripti package.json'a eklendi (npm run test:backend)

--- a/env.example
+++ b/env.example
@@ -6,16 +6,12 @@ VITE_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Gemini AI Configuration
 VITE_GEMINI_API_KEY=your_gemini_api_key
 
-# Iyzico Payment Gateway Configuration (SANDBOX)
-VITE_IYZICO_API_KEY=sandbox-xQUfDCNqUzFl3TeQ6TwUxk7QovYnthKL
-VITE_IYZICO_SECRET_KEY=sandbox-njCZVrXuJuKXu12mUdjUs4g9sQHy9PqR
-VITE_IYZICO_BASE_URL=https://sandbox-api.iyzipay.com
-VITE_IYZICO_CALLBACK_URL=https://yourdomain.com/api/webhooks/iyzico-callback
+# Backend API Configuration
+VITE_BACKEND_API_URL=http://localhost:3000/v1
+# Production: VITE_BACKEND_API_URL=https://api.ifoundanapple.com/v1
 
-# Stripe Payment Gateway Configuration (Alternative)
-VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
-VITE_STRIPE_SECRET_KEY=your_stripe_secret_key
-VITE_STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+# PAYNET Payment Gateway Configuration
+# PAYNET credentials are managed by backend, no frontend configuration needed
 
 # Application Configuration
 NODE_ENV=production
