--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server.cjs"
+    "start": "node server.cjs",
+    "test:backend": "node test-backend-api.js"
   },
   "dependencies": {
     "@google/genai": "latest",
