feat: update payment processing and escrow management to utilize backend API
- Added IBAN validation configuration to env.example.
- Deprecated local payment processing and escrow functions, directing to backend API for all operations.
- Updated PaymentSuccessPage to reflect backend handling of payment records.
- Enhanced documentation to clarify new payment flow and backend integration.
- Removed outdated files and references related to previous payment processing methods.

--- a/env.example
+++ b/env.example
@@ -36,6 +36,10 @@ SMTP_PASS=your_smtp_password
 CARGO_API_KEY=your_cargo_api_key
 CARGO_API_URL=https://api.cargo.com
 
+# IBAN Validation
+IBAN_VALIDATION_API_KEY=your_iban_validation_api_key
+# IBAN_VALIDATION_API_URL=https://api.iban.com/v1/validate (optional, if using external service)
+
 # Audit and Logging
 LOG_LEVEL=info
 AUDIT_LOG_ENABLED=true
