--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dompurify": "^3.2.7",
     "express": "^5.1.0",
     "iyzipay": "^2.0.64",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
